scss/injector_style.scss
@font-face {
	src: url('chrome-extension://__MSG_@@extension_id__/font/Ubuntu-M.ttf');
	font-family: "Ubuntu Medium";
}

@font-face {
	src: url('chrome-extension://__MSG_@@extension_id__/font/Ubuntu-LI.ttf');
	font-family: "Ubuntu Light Italic";
}

$frame-width: 250px;
$frame-radius: 5px;
$frame-color: #333;

$highlight-color: #79C3C4;
$title-color: #79C3C4;
$link-text-color: #aaa;
$link-title-color: #666;
$browser-color: #eee;

$title-bar-height: 30px;
$title-size: 20px;
$version-font-size: 15px;
$link-height: 45px;
$browser-height: 3.5 * $link-height; // If it's a whole multiple it isn't clear that the box is scrollable
$link-highlight-color: #333;
$link-font-size: 15px;
$link-right-margin: 7px;

#shrub-injection-frame {
	-webkit-font-smoothing: antialiased;
	position: fixed;
	top: 50px;
	left: 50px;
	border-radius: $frame-radius;
	z-index: -99;
	visibility: hidden;
	width: $frame-width;
	background-color: $frame-color;

	#shrub-title-bar {
		width: 100%;
		height: $title-bar-height;
		color: $title-color;
		font-size: $title-size;
		display: flex;
		align-items: center;
		justify-content: space-between;
		padding: 5px;
		box-sizing: border-box;
		font-family: "Ubuntu Medium";

		#shrub-title-text {
			font-size: $title-size;
			margin: 0px;
		}

		#shrub-version-text {
			font-family: "Ubuntu Light Italic";
			text-decoration: none;
			font-size: $version-font-size;
		}
	}

	#shrub-browser {
		width: 100%;
		max-height: $browser-height;
		min-height: $link-height;
		background-color: $browser-color;
		border-radius: $frame-radius;
		overflow: scroll;
		direction: rtl;

		.shrub-browser-link {
			font-family: "Ubuntu Light Italic";
			width: 100%;
			height: $link-height;
			font-size: $link-font-size;
			color: $link-text-color;
			display: flex;
			align-items: center;
			direction: ltr;

			.shrub-browser-link-text {
				margin-right: 10px;
				text-align: right;
				margin-left: auto;
				white-space: nowrap;

				.shrub-link-header {
					font-family: "Ubuntu Medium";
					color: $link-title-color;
					margin-bottom: -3px;
				}
			}

			&:hover {
				background-color: $link-highlight-color;
				cursor: pointer;

				.shrub-link-header {
					color: $highlight-color;
				}
			}
		}
	}

	* {
		padding: 0px;
		margin: 0px;
	}
}

